# frsr_calibrate

./: .gitignore  README.md  pyproject.toml  requirements.txt
class/: frsr_background.ini
src/frsr/: __init__.py
src/frsr/cli/: __init__.py  frsr_cal_dark_energy_de_today.py  frsr_calibrator.py  run_calibrate.py  run_scan.py  sympy_report.py
src/frsr/config/: frsr.calibration.toml  frsr.default.toml  settings.py
src/frsr/core/: __init__.py  frsr_background.py  frsr_checks.py  frsr_constraints_bridge.py
src/frsr/io/: __init__.py  frsr_export_cpl.py  frsr_loader.py  frsr_make_class_background.py  frsr_plotting.py
src/frsr/utils/: __init__.py  frsr_mp_hook.py  log.py
tests/: conftest.py  test_loader_toml.py  test_make_class_background.py  test_readme_commands.py
tools/: smoke_make_ini.sh
